Changes in Release 1.0.6 beta
* switch to apache license
* bug #985274 f:view locale does not always work
* bug #978654 Input hidden value of null being converted to zero
* bug #979038 jsCookMenu component does not create dummyForm
* bug #979039 default-values for ConvertNumberTag and ConvertDateTimeTag
* changed build.xml - now myfaces-components are shipped via bin-distribution

----------------------------------------------------------------------
Changes in Release 1.0.5 beta
* new faces configurator
* new validator (Regular Expressions)
* new validator (Equal)
* new component (rssticker)
* new component (dataScroller)
* new component (jscookMenu)
* modified renderers to comply with version 1.1 of the spec
* modified dataList to support active components (comandLink, ...)
* bug #955111	RestoreState of outputText with mixed ValueBinding attribute
* bug #962084	rowClasses in GridRenderer
* bug #967991	Action always called twice
* bug #952385  	decorator only for Viewhandler available
* bug #957938 	map-entries in faces-config.xml
* bug #970747	Incorrect rendering of <select> tag
* bug #972165	<h:selectBooleanCheckbox> and disabled attribute


----------------------------------------------------------------------
Changes in Release 1.0.4 beta

IMPORTANT NOTE: because of fix for bug #952453 the context parameter
javax.faces.application.CONFIG_FILES was changed to the spec-compliant
javax.faces.CONFIG_FILES. You have to modify your web.xml accordingly,
otherwise your config files will no longer be found and parsed.

* new renderedIfEmpty attribute for extended <x:dataTable> component (see tlddocs)
* new validators (creditcard, email)
* bug #961241	Checkbox in dataTable problem
* bug #960581	<x:panelTabbedPane selectedIndex
* bug #959926	<h:selectOneRadio and styleClass
* bug #953783	h:commandLink renders value as text
* bug #955135	graphicImage tag
* bug #952453	Class FacesConfigFactoryBase search for wrong context-param