@@ -44,6 +44,9 @@ commons-validator.jar = ${project.dir}/lib/optional/commons-validator.jar
 # Destination file path of MyFaces implementation archive to be created
 myfaces.jar = ${project.dir}/lib/myfaces.jar
 
+# Destination file path of MyFaces JSF-API implementation archive to be created
+myfaces-jsf-api.jar = ${project.dir}/lib/myfaces-jsf-api.jar
+
 # Destination file path of MyFaces components archive to be created
 myfaces-components.jar = ${project.dir}/lib/myfaces-components.jar
 
