@@ -48,11 +48,11 @@
         <pathelement location="${jstl.jar}"/>
         <pathelement location="${commons-logging.jar}"/>
         <pathelement location="${commons-el.jar}"/>
+        <pathelement location="${myfaces-jsf-api.jar}"/>
     </path>
 
     <!-- classpath for compiling impl classes -->
     <path id="myfaces.class.path">
-        <pathelement location="${api.classes}"/>
         <pathelement location="${share.classes}"/>
         <pathelement location="${share.src}"/>
         <pathelement location="${servlet.jar}"/>
@@ -64,15 +64,16 @@
         <pathelement location="${commons-beanutils.jar}"/>
         <pathelement location="${commons-collections.jar}"/>
         <pathelement location="${commons-digester.jar}"/>
+		<pathelement location="${myfaces-jsf-api.jar}"/>
     </path>
  
     <!-- classpath for compiling component classes -->
     <path id="components.class.path">
-        <pathelement location="${api.classes}"/>
         <pathelement location="${share.classes}"/>
         <pathelement location="${servlet.jar}"/>
         <pathelement location="${jsp-api.jar}"/>
         <pathelement location="${jstl.jar}"/>
+        <pathelement location="${myfaces-jsf-api.jar}"/>
         <pathelement location="${commons-logging.jar}"/>
         <pathelement location="${commons-el.jar}"/>
         <pathelement location="${commons-validator.jar}"/>
@@ -93,6 +94,7 @@
         <pathelement location="${commons-validator.jar}"/>
         <pathelement location="${commons-fileupload.jar}"/>
         <pathelement location="${myfaces.jar}"/>
+        <pathelement location="${myfaces-jsf-api.jar}"/>
         <pathelement location="${commons-beanutils.jar}"/>
         <pathelement location="${commons-collections.jar}"/>
         <pathelement location="${commons-digester.jar}"/>
@@ -100,11 +102,7 @@
 
     <target name="myfaces-jar"
             description="builds the myfaces.jar file"
-            depends="-compile-api,
-                     -compile-share,
-                     -compile-impl,
-                     -compile-components,
-                     resolve-tld-entities" >
+            depends="-compile-share,-compile-impl,-compile-components,myfaces-jsf-api-jar,resolve-tld-entities" >
         <!-- timestamp for the manifest -->
         <tstamp>
             <format property="TODAY" pattern="yyyy-MM-dd HH:mm z"/>
@@ -123,9 +121,9 @@
             </manifest>
 
             <!-- classes -->
-            <fileset dir="${api.classes}"
+            <!--fileset dir="${api.classes}"
                      includes="**"
-                     excludes=".dependency-info/**/*"/>
+                     excludes=".dependency-info/**/*"/-->
             <fileset dir="${share.classes}"
                      includes="**"
                      excludes=".dependency-info/**/*"/>
@@ -148,6 +146,34 @@
             <zipfileset dir="${project.dir}/conf"
                         includes="faces-config.xml"
                         prefix="META-INF/"/>
+        </jar>
+
+    </target>
+
+    <target name="myfaces-jsf-api-jar"
+            description="builds the myfaces-jsf-api.jar file"
+            depends="-compile-api">
+        <!-- timestamp for the manifest -->
+        <tstamp>
+            <format property="TODAY" pattern="yyyy-MM-dd HH:mm z"/>
+        </tstamp>
+
+        <!-- build the jar -->
+        <jar destfile="${myfaces-jsf-api.jar}">
+            <!-- manifest -->
+            <manifest>
+                <attribute name="Built-By" value="${user.name}"/>
+                <section name="myfaces.sourceforge.net">
+                    <attribute name="Implementation-Title" value="${manifest.impl.title}"/>
+                    <attribute name="Implementation-Version" value="${manifest.impl.version} (${TODAY})"/>
+                    <attribute name="Implementation-Vendor" value="${manifest.impl.vendor}"/>
+                </section>
+            </manifest>
+
+            <!-- classes -->
+            <fileset dir="${api.classes}"
+                     includes="**"
+                     excludes=".dependency-info/**/*"/>
         </jar>
 
     </target>
@@ -222,7 +248,7 @@
 
 
     <target name="bin-release"
-            depends="myfaces-jar, myfaces-components-jar, javadoc, tlddoc"
+            depends="myfaces-jar, myfaces-jsf-api-jar, myfaces-components-jar, javadoc, tlddoc"
             description="creates the binary release file myfaces-x.x.x.tgz (don't forget to adjust manifest.properties!)">
 
         <tar destfile="${project.dir}/myfaces-${manifest.impl.version}.tgz"
@@ -257,6 +283,8 @@
             <tarfileset file="${commons-collections.jar}"
                         prefix="myfaces-${manifest.impl.version}/lib"/>
             <tarfileset file="${myfaces-components.jar}"
+            			prefix="myfaces-${manifest.impl.version}/lib" />
+            <tarfileset file="${myfaces-jsf-api.jar}"
             			prefix="myfaces-${manifest.impl.version}/lib" />
         </tar>
     </target>
