@@ -39,7 +39,7 @@
 
 
     <target name="-war"
-            depends="-myfaces-jar"
+            depends="-myfaces-jar,-myfaces-jsf-api-jar"
     	    description="creates the taglib-test war file">
         <mkdir dir="${temp.dir}"/>
         <tstamp>
@@ -60,6 +60,7 @@
             <lib file="${jsp-api.jar}"/>
             <lib file="${jstl.jar}"/>
             <lib file="${myfaces.jar}"/>
+            <lib file="${myfaces-jsf-api.jar}"/>
             <lib file="${log4j.jar}"/>
             <lib dir="${tagunit.lib.dir}">
                 <include name="*.jar"/>
@@ -96,6 +97,17 @@
     <target name="-create-myfaces-jar" unless="myfaces.jar.available"
             description="creates myfaces.jar via main buildfile" >
         <ant dir="${project.dir}/build" antfile="build.xml" target="myfaces-jar" inheritall="false"/>
+    </target>
+
+
+    <target name="-myfaces-jsf-api-jar" description="create myfaces.jar if necessary" >
+        <available file="${myfaces-jsf-api.jar}" property="myfaces.jar.available"/>
+        <antcall target="-create-myfaces-jsf-api-jar"/>
+    </target>
+
+    <target name="-create-myfaces-jsf-api-jar" unless="myfaces.jar.available"
+            description="creates myfaces-jsf-api.jar via main buildfile" >
+        <ant dir="${project.dir}/build" antfile="build.xml" target="myfaces-jsf-api-jar" inheritall="false"/>
     </target>
 
 </project>
