@@ -9,7 +9,8 @@ Changes in Release 1.0.6 beta
 * bug #979038 jsCookMenu component does not create dummyForm
 * bug #979039 default-values for ConvertNumberTag and ConvertDateTimeTag
 * changed build.xml - now myfaces-components are shipped via bin-distribution
-
+* bug #985217 decorator-factory not supported
+* splitting jar-files (myfaces.jar, myfaces-jsf-api.jar, myfaces-components.jar)
 ----------------------------------------------------------------------
 Changes in Release 1.0.5 beta
 * new faces configurator
